5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1706_3036.log
== SUBMITION (2019-04-29 18:33:27) 
-- CODE:
x=float(input("qual valor de x?"))
if x<=-1 or x>=1:
	print(round(x,2))
elif((-1<x)and x<0)or ((o<x) and (x<1)):
	print (1)
elif x=0:
	print(2)
-- EXECUTION TIME:
0.140677
-- ERROR:
  File "/home/codebench/codes/1706/3036/main.py", line 6
    elif x=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:33:28) 
-- CODE:
x=float(input("qual valor de x?"))
if x<=-1 or x>=1:
	print(round(x,2))
elif((-1<x)and x<0)or ((o<x) and (x<1)):
	print (1)
elif x=0:
	print(2)
-- EXECUTION TIME:
0.135691
-- ERROR:
  File "/home/codebench/codes/1706/3036/main.py", line 6
    elif x=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:33:29) 
-- CODE:
x=float(input("qual valor de x?"))
if x<=-1 or x>=1:
	print(round(x,2))
elif((-1<x)and x<0)or ((o<x) and (x<1)):
	print (1)
elif x=0:
	print(2)
-- EXECUTION TIME:
0.19764
-- ERROR:
  File "/home/codebench/codes/1706/3036/main.py", line 6
    elif x=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:01) 
-- CODE:
x=float(input("qual valor de x?"))
if x<= -1 or x>=1:
	print(round(x,2))
elif((-1<x) and x<0) or ((o<x) and (x<1)):
	print (1)
elif x=0:
	print(2)
-- ERROR:
File "XXXX", line 6
    elif x=0:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:11) 
-- CODE:
x=float(input("qual valor de x?"))
if x<= -1 or x>=1:
	print(round(x,2))
elif((-1<x) and x<0) or ((o<x) and (x<1)):
	print (1)
elif (x=0):
	print(2)
-- ERROR:
File "XXXX", line 6
    elif (x=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:34:19) 
-- CODE:
x=float(input("qual valor de x?"))
if x<= -1 or x>=1:
	print(round(x,2))
elif((-1<x) and x<0) or ((o<x) and (x<1)):
	print (1)
elif (x==0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:34:39) 
-- CODE:
x=float(input("qual valor de x?"))
if x<= -1 or x>=1:
	print(round(x,2))
elif((-1<x) and x<0) or ((o<x) and (x<1)):
	print (1)
elif (x==0):
	print(2)
-- EXECUTION TIME:
0.150808
-- TEST CASE 1:
---- input:
-0.59
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
0.99
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
-1.01
---- correct output:
-1.01
---- user output:
-1.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:34:55) 
-- CODE:
x=float(input("qual valor de x?"))
if x<= -1 or x>=1:
	print(round(x,2))
elif((-1 < x) and x<0) or ((0<x) and (x<1)):
	print (1)
elif (x==0):
	print(2)
-- EXECUTION TIME:
0.136768
-- TEST CASE 1:
---- input:
-0.59
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
0.99
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
-1.01
---- user output:
-1.01
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
